[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riskmesh"
version = "0.1.0"
description = "Real-time risk pricing and insurance marketplace for AI agent transactions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["risk", "insurance", "ai-agents", "marketplace", "monte-carlo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/riskmesh/riskmesh"
Repository = "https://github.com/riskmesh/riskmesh"
Issues = "https://github.com/riskmesh/riskmesh/issues"

[project.scripts]
riskmesh = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
